--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-fontawesome": "^1.6.4",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-window": "^1.8.2",
     "antd": "^4.3.4",
     "axios": "^0.19.2",
     "craco-less": "^1.17.0",
@@ -31,6 +32,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-window": "^1.8.5",
     "redux": "^4.0.5",
     "typescript": "~3.7.2"
   },
